# qmlogre

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  main.qml  ogrecontext.cpp  ogrecontext.h  ogreqml.qrc  plugins.cfg  resources.cfg  uirenderer.cpp  uirenderer.h
